# monitoring_misc

./: .gitignore  README.md
docker_monitoring/: docker-compose.services.yml  docker-compose.yml
elk_monitoring/: .env_eg
node_svc_1/: Dockerfile  index.js  package-lock.json  package.json
python_svc_1/python_app_1/: pyproject.toml
python_svc_1/python_app_1/python_django/python_django/: settings.py  urls.py  views.py
python_svc_2/: main.py
