[tool.poetry]
name = "python-app-1"
version = "0.1.0"
description = ""
authors = ["iamlucasmateo <lucasmateo300@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
